Bug 499334 - Statusbar can't be hidden on git projects
Summary: Statusbar can't be hidden on git projects
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 23.08.5
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-30 17:04 UTC by alpi.tolvanen@tutanota.com
Modified: 2025-02-12 11:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alpi.tolvanen@tutanota.com 2025-01-30 17:04:44 UTC
SUMMARY
Statusbar can't be hidden on git-tracked files because the branch button won't hide.

STEPS TO REPRODUCE
1. Have some file that is tracked by git
2. Click Settings -> Disable "Show Statusbar"

OBSERVED RESULT
Statusbar (on the bottom of window) won't hide because it shows the button for current branch. Other content of the statusbar hides as expected, such as encoding and tab width.


EXPECTED RESULT
The whole statusbar hides.

SOFTWARE/OS VERSIONS
Kate version: 23.08.5
Linux/KDE Plasma: Kubuntu 24.04
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.13

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2025-01-31 09:06:28 UTC
Because the branch button is not part of statusbar
Comment 2 Waqar Ahmed 2025-02-12 11:20:25 UTC
Git commit 1400780e40d5fc18993ed916c65b6fc87cac7f29 by Waqar Ahmed.
Committed on 12/02/2025 at 11:20.
Pushed by waqar into branch 'master'.

Fix Statusbar can't be hidden on git projects

Hide everything after the bottom sidebar. All of it is statusbar stuff

M  +1    -2    apps/lib/katemainwindow.cpp
M  +13   -0    apps/lib/katemdi.cpp
M  +2    -0    apps/lib/katemdi.h

https://invent.kde.org/utilities/kate/-/commit/1400780e40d5fc18993ed916c65b6fc87cac7f29
Comment 3 Waqar Ahmed 2025-02-12 11:57:41 UTC
Git commit 94480af324006537cb13750ea25f0854ebad1ec6 by Waqar Ahmed.
Committed on 12/02/2025 at 11:56.
Pushed by waqar into branch 'release/24.12'.

Fix Statusbar can't be hidden on git projects

Hide everything after the bottom sidebar. All of it is statusbar stuff
(cherry picked from commit 1400780e40d5fc18993ed916c65b6fc87cac7f29)

M  +1    -2    apps/lib/katemainwindow.cpp
M  +13   -0    apps/lib/katemdi.cpp
M  +2    -0    apps/lib/katemdi.h

https://invent.kde.org/utilities/kate/-/commit/94480af324006537cb13750ea25f0854ebad1ec6