Fix Statusbar can't be hidden on git projects

Hide everything after the bottom sidebar. All of it is statusbar stuff

BUG: 499334