apps/lib/katemdi.h
@@ -562,6 +562,8 @@ protected:
     // ensure we don't have toolbar accelerators that clash with other stuff
     QWidget *createContainer(QWidget *parent, int index, const QDomElement &element, QAction *&containerAction) override;
 
+    void setStatusBarVisible(bool visible);
+
     /**
      * modifiers for existing toolviews
      */
